--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -4,6 +4,7 @@ const { title } = Astro.props;
 
 <title>{title}</title>
 
+<!-- Google Fonts -->
 <link rel="preconnect" href="https://fonts.googleapis.com" />
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 <link
@@ -11,7 +12,12 @@ const { title } = Astro.props;
     rel="stylesheet"
 />
 
+<!-- Favicons -->
 <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
 <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
 <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
 <link rel="manifest" href="/site.webmanifest" />
+
+<!-- FontAwesome -->
+<script src="https://kit.fontawesome.com/2a94fda0f8.js" crossorigin="anonymous"
+></script>
