--- a/src/layouts/MasterLayout.astro
+++ b/src/layouts/MasterLayout.astro
@@ -1,11 +1,14 @@
 ---
 import BaseHead from "../components/BaseHead.astro";
-import "../styles/global.css";
+import StickyNav from "../components/StickyNav.astro";
 // import Footer from '../components/Footer.astro';
+
+import "../styles/global.css";
+
 const { title } = Astro.props;
 ---
 
-<html lang="en">
+<html lang="en" class="text-stone-800">
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -14,6 +17,7 @@ const { title } = Astro.props;
     </head>
 
     <body>
+        <StickyNav />
         <slot />
         <!-- <Footer /> -->
     </body>
