--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,5 +4,5 @@ import MasterLayout from "../layouts/MasterLayout.astro";
 
 <MasterLayout title="Petapetual">
     Hello world
-    <div class="bg-red-200 min-h-screen">test</div>
+    <div class="min-h-screen bg-blue-200">hihii</div>
 </MasterLayout>
