Comment out signin/signup, replace with placeholder for waitlist

--- a/src/components/StickyNav.astro
+++ b/src/components/StickyNav.astro
@@ -45,7 +45,7 @@ import DTOSLogo from "../assets/img/dtos-logo-h.png";
 
         <div class="hidden lg:flex flex-grow"></div>
 
-        <a
+        <!-- <a
             target="_blank"
             href="https://app.petapetual.com/signin"
             class="border-2 border-stone-800 rounded-full px-4 py-2 hover:bg-stone-200"
@@ -57,6 +57,13 @@ import DTOSLogo from "../assets/img/dtos-logo-h.png";
             href="https://app.petapetual.com/signup"
             class="bg-stone-800 text-stone-200 rounded-full px-4 py-2 hover:bg-stone-600"
             >Sign up free <i class="fas fa-arrow-right"></i></a
+        > -->
+
+        <a
+            target="_blank"
+            href="/"
+            class="bg-stone-800 text-stone-200 rounded px-4 py-2 hover:bg-stone-600"
+            >Join the waitlist <i class="fas fa-arrow-right"></i></a
         >
     </div>
 </nav>
