--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,5 @@ import MasterLayout from "../layouts/MasterLayout.astro";
 ---
 
 <MasterLayout title="Petapetual">
-    Hello world
-    <div class="min-h-screen bg-blue-200">hihii</div>
+    <h1 class="min-h-screen">HELLO WORLD</h1>
 </MasterLayout>
