--- a/src/components/StickyNav.astro
+++ b/src/components/StickyNav.astro
@@ -40,8 +40,8 @@ import DTOSLogo from "../assets/img/dtos-logo-h.png";
         class="hidden flex-col gap-4 mt-4 lg:divide-y-0 lg:mt-0 lg:flex lg:flex-row lg:gap-6 lg:flex-grow lg:items-center"
     >
         <a class="hover:underline" href="/blog">Blog</a>
-        <a class="hover:underline" href="/blog">Pricing</a>
-        <a class="hover:underline" href="/blog">How it works</a>
+        <a class="hover:underline" href="/pricing">Pricing</a>
+        <a class="hover:underline" href="/how-it-works">How it works</a>
 
         <div class="hidden lg:flex flex-grow"></div>
 
