Add extra spacing in footer

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -5,8 +5,8 @@ import DTOSLogo from "../assets/img/dtos-logo-h.png";
 ---
 
 <footer class="flex flex-col gap-8 bg-stone-800 text-stone-50 p-8">
-    <div class="flex flex-col gap-8 lg:grid lg:grid-cols-4 lg:gap-4">
-        <div class="flex flex-col gap-2 lg:order-4">
+    <div class="flex flex-col gap-8 lg:grid lg:grid-cols-5 lg:gap-4">
+        <div class="flex flex-col gap-2 lg:order-5">
             <b>Resources</b>
             <ul class="text-sm flex flex-col gap-2">
                 <li><a href="/">For pets</a></li>
@@ -20,7 +20,7 @@ import DTOSLogo from "../assets/img/dtos-logo-h.png";
             </ul>
         </div>
 
-        <div class="flex flex-col gap-2 lg:order-3">
+        <div class="flex flex-col gap-2 lg:order-4">
             <b>Services</b>
             <ul class="text-sm flex flex-col gap-2">
                 <li><a href="/">Memorial Tributes</a></li>
@@ -28,7 +28,7 @@ import DTOSLogo from "../assets/img/dtos-logo-h.png";
             </ul>
         </div>
 
-        <div class="flex flex-col gap-2 lg:order-2">
+        <div class="flex flex-col gap-2 lg:order-3">
             <b>Useful Links</b>
             <ul class="text-sm flex flex-col gap-2">
                 <li><a href="/blog">Blog</a></li>
@@ -36,6 +36,8 @@ import DTOSLogo from "../assets/img/dtos-logo-h.png";
                 <li><a href="/how-it-works">How it works</a></li>
             </ul>
         </div>
+
+        <div class="hidden lg:flex lg:order-2"></div>
 
         <div
             class="flex flex-col gap-2 text-xs justify-start items-start lg:order-1"
