--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -52,8 +52,19 @@ import DTOSLogo from "../assets/img/dtos-logo-h.png";
         </div>
     </div>
 
-    <div class="text-center text-sm">Made with love &hearts;</div>
-    <div class="text-center text-sm">
-        &COPY; 2025 DTOS Pte Ltd. All Rights Reserved
+    <hr class="border border-stone-600" />
+
+    <div
+        class="flex flex-col lg:flex-row lg:justify-between text-sm text-center"
+    >
+        <div class="text-center">Made with love &hearts;</div>
+        <div class="text-center">
+            &COPY; 2025 DTOS Pte Ltd. All Rights Reserved
+        </div>
+
+        <div class="flex flex-row justify-around gap-4">
+            <a href="/privacy-policy">Privacy Policy</a>
+            <a href="/terms-and-conditions">Terms & Conditions</a>
+        </div>
     </div>
 </footer>
