Add links to footer

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -12,10 +12,10 @@ import DTOSLogo from "../assets/img/dtos-logo-h.png";
                 <li><a href="/">For pets</a></li>
                 <li><a href="/">For friends</a></li>
                 <li><a href="/">For relatives</a></li>
-                <li><a href="/">For the religious</a></li>
-                <li><a href="/">For those who live far away</a></li>
+                <li><a href="/">To the religious</a></li>
+                <li><a href="/">To those who live far away</a></li>
                 <li>
-                    <a href="/">For those who want to learn their culture</a>
+                    <a href="/">To those who want to learn their culture</a>
                 </li>
             </ul>
         </div>
