Add gradient to style incense body

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -43,7 +43,10 @@ import IncenseHeroImage from "../assets/img/incense-hero.png";
             </div>
 
             <!-- Stick -->
-            <div class="bg-orange-200 grow -z-20 rounded-b-xl"></div>
+            <div
+                class="bg-gradient-to-r from-orange-200 from-10% via-orange-300 via-50% to-orange-200 to-90% grow -z-20 rounded-b-xl"
+            >
+            </div>
 
             <!-- Handle -->
             <div class="flex flex-row z-50">
