--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -20,13 +20,13 @@ import { Image } from "astro:assets";
         <div class="flex flex-col justify-between w-2">
             <!-- Blocker -->
             <div
-                class="fixed top-0 -translate-x-8 bg-stone-100 h-26 w-16 -z-10"
+                class="fixed top-0 -translate-x-8 bg-stone-100 h-26 lg:h-62 w-16 -z-10"
             >
             </div>
 
             <!-- Ember -->
             <div
-                class="flex flex-col sticky top-24 rounded-b-xs border-b-2 border-b-stone-500"
+                class="flex flex-col sticky top-24 lg:top-60 rounded-b-xs border-b-2 border-b-stone-500"
             >
                 <div
                     id="ember"
@@ -57,7 +57,7 @@ import { Image } from "astro:assets";
     const emberColorB = "bg-red-500";
 
     function fluctuateEmberHigh() {
-        const newTimeout = 250 + Math.random() * 1000;
+        const newTimeout = 100 + Math.random() * 500;
         setTimeout(() => {
             emberDivElement?.classList.remove(emberColorB);
             emberDivElement?.classList.add(emberColorA);
@@ -66,7 +66,7 @@ import { Image } from "astro:assets";
     }
 
     function fluctuateEmberLow() {
-        const newTimeout = 250 + Math.random() * 1000;
+        const newTimeout = 100 + Math.random() * 500;
         setTimeout(() => {
             emberDivElement?.classList.add(emberColorB);
             emberDivElement?.classList.remove(emberColorA);
