--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,20 +1,45 @@
 ---
 import MasterLayout from "../layouts/MasterLayout.astro";
 import Incense from "../components/Incense.astro";
+import FeatureCard from "../components/FeatureCard.astro";
 ---
 
 <MasterLayout title="Petapetual">
-    <section class="">
-        <div class="p-2">
-            <h1 class="text-4xl font-bold">Some hero text</h1>
-            <h2 class="text-2xl">Pay your respects and remember loved ones</h2>
+    <section class="flex flex-col gap-4 p-4">
+        <h1 class="text-3xl font-bold">
+            Digital memorials that bring tradition into the modern world
+        </h1>
+
+        <h2 class="text-xl">
+            Use our virtualized tribute services to honour and pay respects to
+            your late loved ones anytime, anywhere.
+        </h2>
+
+        <div class="grid grid-cols-2 gap-2">
+            <a target="_blank" href="" class="p-2 border rounded text-center"
+                ><i class="fas fa-lightbulb"></i> How it works
+            </a>
+
+            <a
+                target="_blank"
+                href=""
+                class="p-2 text-center bg-stone-800 text-stone-200 rounded"
+                >Join the waitlist <i class="fas fa-arrow-right"></i></a
+            >
         </div>
     </section>
 
-    <section class="m-4 lg:m-16 flex flex-row">
-        <div class="flex flex-col grow">
-            <div class="h-screen"></div>
-            <div class="h-screen"></div>
+    <section class="mx-4 mt-4 lg:mx-16 lg:mt-16 flex flex-row gap-4">
+        <div class="flex flex-col gap-8 grow min-h-screen mt-16">
+            <FeatureCard title="Multicultural">
+                A platform for everyone, we aim to support memorials from all
+                walks of cultural and religious backgrounds.
+            </FeatureCard>
+
+            <FeatureCard title="Communal">
+                Invite friends and family to view and interact with your
+                memorials, no matter where they are in the world.
+            </FeatureCard>
         </div>
 
         <Incense />
