--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,7 +16,7 @@ import FeatureCard from "../components/FeatureCard.astro";
         </h2>
 
         <div class="grid grid-cols-2 gap-2">
-            <a target="_blank" href="" class="p-2 border rounded text-center"
+            <a href="/how-it-works" class="p-2 border rounded text-center"
                 ><i class="fas fa-lightbulb"></i> How it works
             </a>
 
