Change wording in homepage

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,7 +11,7 @@ import FeatureCard from "../components/FeatureCard.astro";
         </h1>
 
         <h2 class="text-xl">
-            Use our virtualized tribute services to honour and pay respects to
+            Use our virtualized memorial services to honour and pay respects to
             your late loved ones anytime, anywhere.
         </h2>
 
