Add card to homepage

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -40,6 +40,17 @@ import FeatureCard from "../components/FeatureCard.astro";
                 Invite friends and family to view and interact with your
                 memorials, no matter where they are in the world.
             </FeatureCard>
+
+            <FeatureCard title="Tangible">
+                We are more than a simple page hosting site- our prayer and
+                tribute services are backed by very real actions and digital
+                counterparts. <br />
+                <br />
+                Want to know more? Read up on <a
+                    href="/how-it-works"
+                    class="underline text-blue-600">how it works</a
+                >.
+            </FeatureCard>
         </div>
 
         <Incense />
