Move how-it-works to nested page

--- a/src/pages/how-it-works/index.astro
+++ b/src/pages/how-it-works/index.astro
@@ -1,6 +1,6 @@
 ---
-import DefaultPageLayout from "../layouts/DefaultPageLayout.astro";
-import LinkToTop from "../components/LinkToTop.astro";
+import DefaultPageLayout from "../../layouts/DefaultPageLayout.astro";
+import LinkToTop from "../../components/LinkToTop.astro";
 ---
 
 <DefaultPageLayout id="top">
