Update links in footer

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -23,8 +23,10 @@ import DTOSLogo from "../assets/img/dtos-logo-h.png";
         <div class="flex flex-col gap-2 lg:order-4">
             <b>Services</b>
             <ul class="text-sm flex flex-col gap-2">
-                <li><a href="/">Memorial Tributes</a></li>
-                <li><a href="/">Digital Prayers</a></li>
+                <li><a href="/how-it-works/tributes">Memorial Tributes</a></li>
+                <li>
+                    <a href="/how-it-works/prayer-streams">Digital Prayers</a>
+                </li>
             </ul>
         </div>
 
