Add links and placeholder pages for memorials and prayer streams

--- a/src/pages/how-it-works/index.astro
+++ b/src/pages/how-it-works/index.astro
@@ -81,6 +81,14 @@ import LinkToTop from "../../components/LinkToTop.astro";
                 cultures and religions, set your own custom prayer, or simply
                 choose not to subscribe to a prayer stream.
             </p>
+            <p>
+                If you are interested as to how we can guarantee your memorial
+                receives prayers, you can read up on our approach and
+                implementation on the <a
+                    href="/how-it-works/prayer-streams"
+                    class="underline text-blue-600">Prayer Streams</a
+                > page.
+            </p>
         </section>
 
         <section class="flex flex-col gap-2">
@@ -98,6 +106,14 @@ import LinkToTop from "../../components/LinkToTop.astro";
             <p>
                 Other users you invite to your memorials will be able to place
                 tributes as well.
+            </p>
+
+            <p>
+                If you are interested, you can read up on our approach and
+                implementation on the <a
+                    href="/how-it-works/tributes"
+                    class="underline text-blue-600">Memorial Tributes</a
+                > page.
             </p>
         </section>
     </div>
