Fix page title logic

--- a/src/layouts/BlogPostLayout.astro
+++ b/src/layouts/BlogPostLayout.astro
@@ -3,7 +3,7 @@ import MasterLayout from "./MasterLayout.astro";
 const { frontmatter } = Astro.props;
 ---
 
-<MasterLayout title={`${frontmatter.title} - Petapetual`}>
+<MasterLayout title={`${frontmatter.title}`}>
     <section class="flex flex-col gap-4 m-4">
         <div class="flex flex-col">
             <a href="/blog" class="underline text-blue-600"
