--- a/src/pages/how-it-works/prayer-streams.astro
+++ b/src/pages/how-it-works/prayer-streams.astro
@@ -2,4 +2,4 @@
 import DefaultPageLayout from "../../layouts/DefaultPageLayout.astro";
 ---
 
-<DefaultPageLayout> HO </DefaultPageLayout>
+<DefaultPageLayout title="Prayer Streams"> HO </DefaultPageLayout>
