--- a/src/pages/how-it-works/tributes.astro
+++ b/src/pages/how-it-works/tributes.astro
@@ -2,4 +2,4 @@
 import DefaultPageLayout from "../../layouts/DefaultPageLayout.astro";
 ---
 
-<DefaultPageLayout> HI </DefaultPageLayout>
+<DefaultPageLayout title="Tributes"> HI </DefaultPageLayout>
