Add styling to blog posts

--- a/src/layouts/BlogPostLayout.astro
+++ b/src/layouts/BlogPostLayout.astro
@@ -4,7 +4,7 @@ const { frontmatter } = Astro.props;
 ---
 
 <MasterLayout title={`${frontmatter.title}`}>
-    <section class="flex flex-col gap-4 m-4">
+    <section class="flex flex-col gap-4 m-4 blogPost">
         <div class="flex flex-col">
             <a href="/blog" class="underline text-blue-600"
                 >&NestedLessLess; Back to Blog index</a
