--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -3,3 +3,16 @@
 html {
     font-family: "Lexend", sans-serif;
 }
+
+.blogPost a {
+    color: blue;
+    text-decoration: underline;
+}
+
+.blogPost li {
+    margin: 10px 0;
+}
+
+.blogPost h3 {
+    font-weight: bold;
+}
