--- a/src/layouts/MasterLayout.astro
+++ b/src/layouts/MasterLayout.astro
@@ -5,7 +5,7 @@ import Footer from "../components/Footer.astro";
 
 import "../styles/global.css";
 
-const { title } = Astro.props;
+const { title, description } = Astro.props;
 ---
 
 <html lang="en" class="text-stone-800 bg-stone-100 font-light">
@@ -13,6 +13,7 @@ const { title } = Astro.props;
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="generator" content={Astro.generator} />
+        <meta name="description" content={description} />
         <BaseHead title={title} />
     </head>
 
