Add lg margins to layouts

--- a/src/layouts/BlogPostLayout.astro
+++ b/src/layouts/BlogPostLayout.astro
@@ -7,7 +7,7 @@ const { frontmatter } = Astro.props;
     title={`${frontmatter.title}`}
     description={frontmatter.description}
 >
-    <section class="flex flex-col gap-4 m-4 blogPost">
+    <section class="flex flex-col gap-4 m-4 blogPost lg:mx-32 lg:my-16">
         <div class="flex flex-col">
             <a href="/blog" class="underline text-blue-600"
                 >&NestedLessLess; Back to Blog index</a
