--- a/src/layouts/MasterLayout.astro
+++ b/src/layouts/MasterLayout.astro
@@ -20,7 +20,9 @@ const { title, description } = Astro.props;
     <body>
         <StickyNav />
 
-        <slot />
+        <div class="min-h-screen">
+            <slot />
+        </div>
 
         <Footer />
     </body>
