--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,7 +15,7 @@ import FeatureCard from "../components/FeatureCard.astro";
             your late loved ones anytime, anywhere.
         </h2>
 
-        <div class="grid grid-cols-2 gap-2 lg:flex lg:flex-col col-start-1">
+        <div class="lg:grid lg:grid-cols-2 gap-2 flex flex-col col-start-1">
             <a href="/how-it-works" class="p-2 border rounded text-center"
                 ><i class="fas fa-lightbulb"></i> How it works
             </a>
