Change tailwind class to canonical name

--- a/src/components/Incense.astro
+++ b/src/components/Incense.astro
@@ -26,7 +26,7 @@ Same on lg breakpoint: Tip is top-60, Smoke is h-16, Blocker's h = 60 + 16 + 2 =
         <!-- Smoke -->
         <div
             id="smoke"
-            class="h-16 bg-gradient-to-b from-stone-100 via-stone-200 to-stone-300 animate-pulse"
+            class="h-16 bg-linear-to-b from-stone-100 via-stone-200 to-stone-300 animate-pulse"
         >
         </div>
 
@@ -40,7 +40,7 @@ Same on lg breakpoint: Tip is top-60, Smoke is h-16, Blocker's h = 60 + 16 + 2 =
 
     <!-- Stick -->
     <div
-        class="bg-gradient-to-r from-orange-200 from-10% via-orange-300 via-50% to-orange-200 to-90% grow -z-20 rounded-b-xl"
+        class="bg-linear-to-r from-orange-200 from-10% via-orange-300 via-50% to-orange-200 to-90% grow -z-20 rounded-b-xl"
     >
     </div>
 
