Add meta description

--- a/src/pages/how-it-works/index.astro
+++ b/src/pages/how-it-works/index.astro
@@ -3,7 +3,11 @@ import DefaultPageLayout from "../../layouts/DefaultPageLayout.astro";
 import LinkToTop from "../../components/LinkToTop.astro";
 ---
 
-<DefaultPageLayout id="top" title="How it works">
+<DefaultPageLayout
+    id="top"
+    title="How it works"
+    description="On-demand virtual blessings and prayers for your memorials. Pay respects to your loved ones anytime, anywhere."
+>
     <div class="flex flex-col gap-8">
         <section>
             <h1 class="text-2xl font-semibold">How it works</h1>
