--- a/src/pages/how-it-works/prayer-streams.astro
+++ b/src/pages/how-it-works/prayer-streams.astro
@@ -2,4 +2,9 @@
 import DefaultPageLayout from "../../layouts/DefaultPageLayout.astro";
 ---
 
-<DefaultPageLayout title="Prayer Streams"> HO </DefaultPageLayout>
+<DefaultPageLayout
+    title="Prayer Streams"
+    description="24/7 prayers for your memorials for any culture or religion. Pay respects to your loved ones anytime, anywhere."
+>
+    HO
+</DefaultPageLayout>
