--- a/src/pages/how-it-works/tributes.astro
+++ b/src/pages/how-it-works/tributes.astro
@@ -2,4 +2,9 @@
 import DefaultPageLayout from "../../layouts/DefaultPageLayout.astro";
 ---
 
-<DefaultPageLayout title="Tributes"> HI </DefaultPageLayout>
+<DefaultPageLayout
+    title="Tributes"
+    description="On-demand virtual blessings and prayers for your memorials. Pay respects to your loved ones anytime, anywhere."
+>
+    HI
+</DefaultPageLayout>
