--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,10 @@ import Incense from "../components/Incense.astro";
 import FeatureCard from "../components/FeatureCard.astro";
 ---
 
-<MasterLayout title="Petapetual">
+<MasterLayout
+    title="Petapetual"
+    description="Online memorials to pay respects to your late loved ones. 24/7 virtualized prayer services and blessings available."
+>
     <section class="flex flex-col gap-4 p-4 lg:grid lg:grid-cols-2 lg:m-16">
         <h1 class="text-3xl font-bold col-start-1">
             Digital memorials that bring tradition into the modern world
