--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -35,7 +35,7 @@ import FeatureCard from "../components/FeatureCard.astro";
     <section class="mx-4 mt-4 lg:mx-16 lg:mt-16 flex flex-row gap-8">
         <Incense />
 
-        <div class="flex flex-col gap-8 grow min-h-screen my-16">
+        <div class="flex flex-col gap-8 lg:gap-16 grow my-16">
             <FeatureCard
                 iconCode="fas fa-bolt text-yellow-500"
                 title="Tangible"
