--- a/src/pages/how-it-works/index.astro
+++ b/src/pages/how-it-works/index.astro
@@ -1,6 +1,7 @@
 ---
 import DefaultPageLayout from "../../layouts/DefaultPageLayout.astro";
 import LinkToTop from "../../components/LinkToTop.astro";
+import Petapetual from "../../components/Petapetual.astro";
 ---
 
 <DefaultPageLayout
@@ -13,9 +14,9 @@ import LinkToTop from "../../components/LinkToTop.astro";
             <h1 class="text-2xl font-semibold">How it works</h1>
 
             <p>
-                Petapetual is more than just a simple platform to create
-                memorial pages. Learn about our value-add services and
-                virtualised tribute services below:
+                <Petapetual /> is more than just a simple platform to create memorial
+                pages. Learn about our value-add services and virtualised tribute
+                services below:
             </p>
 
             <ul class="list-disc m-8">
@@ -46,8 +47,10 @@ import LinkToTop from "../../components/LinkToTop.astro";
 
             <p>
                 A memorial is a single page you create for your late loved one.
-                You can create multiple memorials depending on the plan you have
-                purchased.
+                They are the bread and butter of the <Petapetual /> experience and
+                most of the value of our platform unlocks after you have created
+                one. You can create multiple memorials depending on the plan you
+                have purchased.
             </p>
 
             <p>
@@ -57,7 +60,7 @@ import LinkToTop from "../../components/LinkToTop.astro";
             </p>
 
             <p>
-                You can also invite other users of Petapetual to your memorial
+                You can also invite other users of <Petapetual /> to your memorial
                 to view it and leave a loving message in the guestbook.
             </p>
 
@@ -65,7 +68,7 @@ import LinkToTop from "../../components/LinkToTop.astro";
                 All memorials created under a paid plan can subscribe to a <a
                     class="underline text-blue-600"
                     href="#prayer-streams">prayer stream</a
-                > in order to receive prayers 24/7.
+                > in order to receive virtual prayers 24/7.
             </p>
         </section>
 
@@ -76,17 +79,15 @@ import LinkToTop from "../../components/LinkToTop.astro";
 
             <p>
                 Memorials can be subscribed to <i>prayer streams</i>, which are
-                automated virtual prayer sessions that happen 24/7. When
-                subscribed, you are guaranteed that your memorial will receive
-                your prayers and blessings every day.
+                powerful automated virtual prayer sessions that happen 24/7.
+                When subscribed, you are guaranteed that your memorial will
+                receive the prayers and blessings of your choice constantly
+                every day. You may choose from a variety of prayers across
+                different cultures and religions, or simply choose not to
+                subscribe to a prayer stream.
             </p>
-            <p>
-                You may choose from a variety of prayers across different
-                cultures and religions, set your own custom prayer, or simply
-                choose not to subscribe to a prayer stream.
-            </p>
-            <p>
-                If you are interested as to how we can guarantee your memorial
+            <p class="p-4 bg-blue-200 rounded border border-blue-400">
+                If you are interested as to how we guarantee your memorial
                 receives prayers, you can read up on our approach and
                 implementation on the <a
                     href="/how-it-works/prayer-streams"
@@ -103,8 +104,8 @@ import LinkToTop from "../../components/LinkToTop.astro";
             <p>
                 <i>Tributes</i> are additional adornments and blessings you may add
                 to your memorials to pay your respects. They have different purposes
-                and effects, from being purely decorative to having an actual service
-                or action tied to them.
+                and effects, ranging from being purely decorative to having an actual
+                service or action tied to them when they are used.
             </p>
 
             <p>
@@ -112,7 +113,7 @@ import LinkToTop from "../../components/LinkToTop.astro";
                 tributes as well.
             </p>
 
-            <p>
+            <p class="p-4 bg-blue-200 rounded border border-blue-400">
                 If you are interested, you can read up on our approach and
                 implementation on the <a
                     href="/how-it-works/tributes"
