--- a/src/layouts/MasterLayout.astro
+++ b/src/layouts/MasterLayout.astro
@@ -20,7 +20,7 @@ const { title, description } = Astro.props;
     <body>
         <StickyNav />
 
-        <div class="min-h-screen">
+        <div class="min-h-[50vh]">
             <slot />
         </div>
 
