Update lg breakpoint of layouts to use max-w-6/12

--- a/src/layouts/DefaultPageLayout.astro
+++ b/src/layouts/DefaultPageLayout.astro
@@ -6,7 +6,7 @@ const pageTitle = `${title ? title + " - " : ""}Petapetual`;
 ---
 
 <MasterLayout title={pageTitle}>
-    <section class="flex flex-col gap-4 m-4 lg:mx-32 lg:my-16">
+    <section class="flex flex-col gap-4 m-4 lg:mx-auto lg:max-w-6/12 lg:my-16">
         <slot />
     </section>
 </MasterLayout>
