--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -25,7 +25,7 @@ import DTOSLogo from "../assets/img/dtos-logo-h.png";
             <ul class="text-sm flex flex-col gap-2">
                 <li><a href="/how-it-works/tributes">Memorial Tributes</a></li>
                 <li>
-                    <a href="/how-it-works/prayer-streams">Digital Prayers</a>
+                    <a href="/how-it-works/prayer-streams">Prayer Streams</a>
                 </li>
             </ul>
         </div>
