--- a/src/pages/how-it-works/tributes.astro
+++ b/src/pages/how-it-works/tributes.astro
@@ -6,5 +6,8 @@ import DefaultPageLayout from "../../layouts/DefaultPageLayout.astro";
     title="Tributes"
     description="On-demand virtual blessings and prayers for your memorials. Pay respects to your loved ones anytime, anywhere."
 >
-    HI
+    <h1 class="text-2xl font-semibold">Memorial Tributes</h1>
+
+    <p>Inspired by asdf</p>
+    <p>Inspired by asdf</p>
 </DefaultPageLayout>
