petapetual text component now links to homepage

--- a/src/components/Petapetual.astro
+++ b/src/components/Petapetual.astro
@@ -2,6 +2,8 @@
 
 ---
 
-<span class="font-extralight"
-    >peta<span class="font-semibold">petual</span></span
->
+<span class="font-extralight">
+    <a href="/">
+        peta<span class="font-semibold">petual</span>
+    </a>
+</span>
