Fix grammar error

--- a/src/pages/how-it-works/prayer-streams.astro
+++ b/src/pages/how-it-works/prayer-streams.astro
@@ -11,7 +11,7 @@ import PrayerStreamWidget from "../../components/PrayerStreamWidget.astro";
     <h1 class="text-2xl font-semibold">Prayer Streams</h1>
 
     <p>
-        Inspired by electric the prayer chanting boxes used in Asia, spinning
+        Inspired by the electric prayer chanting boxes used in Asia, spinning
         Tibetan prayer wheels, and the practice of temples around the world to
         play pre-recorded mantras, prayer streams are <Petapetual />'s way to
         virtualize and automate prayers so that they can be used to serve your
@@ -87,5 +87,10 @@ import PrayerStreamWidget from "../../components/PrayerStreamWidget.astro";
             >nothing compares to showing up in person and reciting the prayers
             yourself</i
         >.
+    </p>
+
+    <p>
+        You can set up a prayer stream when creating a memorial on <Petapetual
+        />.
     </p>
 </DefaultPageLayout>
