--- a/src/pages/how-it-works/prayer-streams.astro
+++ b/src/pages/how-it-works/prayer-streams.astro
@@ -90,7 +90,7 @@ import PrayerStreamWidget from "../../components/PrayerStreamWidget.astro";
     </p>
 
     <p>
-        You can set up a prayer stream when creating a memorial on <Petapetual
+        You can set up a prayer stream on paid plans when creating a memorial on <Petapetual
         />.
     </p>
 </DefaultPageLayout>
