--- a/src/pages/how-it-works/index.astro
+++ b/src/pages/how-it-works/index.astro
@@ -94,6 +94,11 @@ import Petapetual from "../../components/Petapetual.astro";
                     class="underline text-blue-600">Prayer Streams</a
                 > page.
             </p>
+
+            <p>
+                You can subscribe your memorials to prayer streams in the <Petapetual
+                /> service when creating them on any paid plan.
+            </p>
         </section>
 
         <section class="flex flex-col gap-2">
@@ -119,6 +124,11 @@ import Petapetual from "../../components/Petapetual.astro";
                     href="/how-it-works/tributes"
                     class="underline text-blue-600">Memorial Tributes</a
                 > page.
+            </p>
+
+            <p>
+                Tributes are an optional supplementary offering in the <Petapetual
+                /> service.
             </p>
         </section>
     </div>
