--- a/src/pages/how-it-works/prayer-streams.astro
+++ b/src/pages/how-it-works/prayer-streams.astro
@@ -41,7 +41,7 @@ import PrayerStreamWidget from "../../components/PrayerStreamWidget.astro";
             />
         </div>
 
-        <i class="text-sm"
+        <i class="text-sm text-center"
             >For illustrative purposes only. Does not represent the entirety of <Petapetual
             />'s prayer stream catalogue or services.</i
         >
